--- a/app/src/main/res/layout/activity_animal_lesson.xml
+++ b/app/src/main/res/layout/activity_animal_lesson.xml
@@ -13,6 +13,7 @@
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/logo" />
 
     <TextView
