--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,6 +8,7 @@
 
     <ImageView
         android:id="@+id/quzImageViewAnimal"
+        android:layout_marginTop="20dp"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
@@ -33,7 +34,7 @@
         android:gravity="left"
         android:layout_marginTop="10dp"
         android:textSize="15sp"
-        android:text="Dalam Bahasa Inggris adalah" />
+        android:text="Dalam bahasa Inggris adalah" />
 
     <RadioGroup
         android:layout_width="wrap_content"
